target/debug/build/alvr_server-72cca23adabe7b9b/out/bindings.rs

#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct FfiViewsConfig {
    pub fov: [FfiFov; 2usize],
    pub ipd_m: f32,
}
#[test]
fn bindgen_test_layout_FfiViewsConfig() {
    const UNINIT: ::std::mem::MaybeUninit<FfiViewsConfig> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<FfiViewsConfig>(),
        36usize,
        concat!("Size of: ", stringify!(FfiViewsConfig))
    );
    assert_eq!(
        ::std::mem::align_of::<FfiViewsConfig>(),
        4usize,
        concat!("Alignment of ", stringify!(FfiViewsConfig))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).fov) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(FfiViewsConfig),
            "::",
            stringify!(fov)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).ipd_m) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(FfiViewsConfig),
            "::",
            stringify!(ipd_m)
        )
    );
}
pub const FfiButtonType_BUTTON_TYPE_BINARY: FfiButtonType = 0;
pub const FfiButtonType_BUTTON_TYPE_SCALAR: FfiButtonType = 1;
pub type FfiButtonType = ::std::os::raw::c_int;
#[repr(C)]
#[derive(Copy, Clone)]
pub struct FfiButtonValue {
    pub type_: FfiButtonType,
    pub __bindgen_anon_1: FfiButtonValue__bindgen_ty_1,
}
#[repr(C)]
#[derive(Copy, Clone)]
pub union FfiButtonValue__bindgen_ty_1 {
    pub binary: ::std::os::raw::c_uint,
    pub scalar: f32,
}
#[test]
fn bindgen_test_layout_FfiButtonValue__bindgen_ty_1() {
    const UNINIT: ::std::mem::MaybeUninit<FfiButtonValue__bindgen_ty_1> =
        ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<FfiButtonValue__bindgen_ty_1>(),
        4usize,
        concat!("Size of: ", stringify!(FfiButtonValue__bindgen_ty_1))
    );
    assert_eq!(
        ::std::mem::align_of::<FfiButtonValue__bindgen_ty_1>(),
        4usize,
        concat!("Alignment of ", stringify!(FfiButtonValue__bindgen_ty_1))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).binary) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(FfiButtonValue__bindgen_ty_1),
            "::",
            stringify!(binary)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).scalar) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(FfiButtonValue__bindgen_ty_1),
            "::",
            stringify!(scalar)
        )
    );
}
impl Default for FfiButtonValue__bindgen_ty_1 {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[test]
fn bindgen_test_layout_FfiButtonValue() {
    const UNINIT: ::std::mem::MaybeUninit<FfiButtonValue> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<FfiButtonValue>(),
        8usize,
        concat!("Size of: ", stringify!(FfiButtonValue))
    );
    assert_eq!(
        ::std::mem::align_of::<FfiButtonValue>(),
        4usize,
        concat!("Alignment of ", stringify!(FfiButtonValue))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).type_) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(FfiButtonValue),
            "::",
            stringify!(type_)
        )
    );
}
impl Default for FfiButtonValue {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct FfiDynamicEncoderParams {
    pub updated: ::std::os::raw::c_uint,
    pub bitrate_bps: ::std::os::raw::c_ulonglong,
    pub framerate: f32,
    pub normalized_value: f32,
    pub target_packetSize: f32,
}
#[test]
fn bindgen_test_layout_FfiDynamicEncoderParams() {
    const UNINIT: ::std::mem::MaybeUninit<FfiDynamicEncoderParams> =
        ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<FfiDynamicEncoderParams>(),
        32usize,
        concat!("Size of: ", stringify!(FfiDynamicEncoderParams))
    );
    assert_eq!(
        ::std::mem::align_of::<FfiDynamicEncoderParams>(),
        8usize,
        concat!("Alignment of ", stringify!(FfiDynamicEncoderParams))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).updated) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(FfiDynamicEncoderParams),
            "::",
            stringify!(updated)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).bitrate_bps) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(FfiDynamicEncoderParams),
            "::",
            stringify!(bitrate_bps)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).framerate) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(FfiDynamicEncoderParams),
            "::",
            stringify!(framerate)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).normalized_value) as usize - ptr as usize },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(FfiDynamicEncoderParams),
            "::",
            stringify!(normalized_value)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).target_packetSize) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(FfiDynamicEncoderParams),
            "::",
            stringify!(target_packetSize)
        )
    );
}
extern "C" {
    pub static mut FRAME_RENDER_VS_CSO_PTR: *const ::std::os::raw::c_uchar;
}
extern "C" {
    pub static mut FRAME_RENDER_VS_CSO_LEN: ::std::os::raw::c_uint;
}
extern "C" {
    pub static mut FRAME_RENDER_PS_CSO_PTR: *const ::std::os::raw::c_uchar;
}
extern "C" {
    pub static mut FRAME_RENDER_PS_CSO_LEN: ::std::os::raw::c_uint;
}
extern "C" {
    pub static mut QUAD_SHADER_CSO_PTR: *const ::std::os::raw::c_uchar;
}
extern "C" {
    pub static mut QUAD_SHADER_CSO_LEN: ::std::os::raw::c_uint;
}
extern "C" {
    pub static mut COMPRESS_AXIS_ALIGNED_CSO_PTR: *const ::std::os::raw::c_uchar;
}
extern "C" {
    pub static mut COMPRESS_AXIS_ALIGNED_CSO_LEN: ::std::os::raw::c_uint;
}
extern "C" {
    pub static mut COLOR_CORRECTION_CSO_PTR: *const ::std::os::raw::c_uchar;
}
extern "C" {
    pub static mut COLOR_CORRECTION_CSO_LEN: ::std::os::raw::c_uint;
}
extern "C" {
    pub static mut QUAD_SHADER_COMP_SPV_PTR: *const ::std::os::raw::c_uchar;
}
extern "C" {
    pub static mut QUAD_SHADER_COMP_SPV_LEN: ::std::os::raw::c_uint;
}
extern "C" {
    pub static mut COLOR_SHADER_COMP_SPV_PTR: *const ::std::os::raw::c_uchar;
}
extern "C" {
    pub static mut COLOR_SHADER_COMP_SPV_LEN: ::std::os::raw::c_uint;
}
extern "C" {
    pub static mut FFR_SHADER_COMP_SPV_PTR: *const ::std::os::raw::c_uchar;
}
extern "C" {
    pub static mut FFR_SHADER_COMP_SPV_LEN: ::std::os::raw::c_uint;
}
extern "C" {
    pub static mut RGBTOYUV420_SHADER_COMP_SPV_PTR: *const ::std::os::raw::c_uchar;
}
extern "C" {
    pub static mut RGBTOYUV420_SHADER_COMP_SPV_LEN: ::std::os::raw::c_uint;
}
extern "C" {
    pub static mut g_sessionPath: *const ::std::os::raw::c_char;
}
extern "C" {
    pub static mut g_driverRootDir: *const ::std::os::raw::c_char;
}
extern "C" {
    pub static mut LogError:
        ::std::option::Option<unsafe extern "C" fn(stringPtr: *const ::std::os::raw::c_char)>;
}
extern "C" {
    pub static mut LogWarn:
        ::std::option::Option<unsafe extern "C" fn(stringPtr: *const ::std::os::raw::c_char)>;
}
extern "C" {
    pub static mut LogInfo:
        ::std::option::Option<unsafe extern "C" fn(stringPtr: *const ::std::os::raw::c_char)>;
}
extern "C" {
    pub static mut LogDebug:
        ::std::option::Option<unsafe extern "C" fn(stringPtr: *const ::std::os::raw::c_char)>;
}
extern "C" {
    pub static mut LogPeriodically: ::std::option::Option<
        unsafe extern "C" fn(
            tag: *const ::std::os::raw::c_char,
            stringPtr: *const ::std::os::raw::c_char,
        ),
    >;
}
extern "C" {
    pub static mut DriverReadyIdle:
        ::std::option::Option<unsafe extern "C" fn(setDefaultChaprone: bool)>;
}
extern "C" {
    pub static mut InitializeDecoder: ::std::option::Option<
        unsafe extern "C" fn(
            configBuffer: *const ::std::os::raw::c_uchar,
            len: ::std::os::raw::c_int,
            codec: ::std::os::raw::c_int,
        ),
    >;
}
extern "C" {
    pub static mut VideoSend: ::std::option::Option<
        unsafe extern "C" fn(
            targetTimestampNs: ::std::os::raw::c_ulonglong,
            buf: *mut ::std::os::raw::c_uchar,
            len: ::std::os::raw::c_int,
            isIdr: bool,
        ),
    >;
}
extern "C" {
    pub static mut HapticsSend: ::std::option::Option<
        unsafe extern "C" fn(
            path: ::std::os::raw::c_ulonglong,
            duration_s: f32,
            frequency: f32,
            amplitude: f32,
        ),
    >;
}
extern "C" {
    pub static mut ShutdownRuntime: ::std::option::Option<unsafe extern "C" fn()>;
}
extern "C" {
    pub static mut PathStringToHash: ::std::option::Option<
        unsafe extern "C" fn(path: *const ::std::os::raw::c_char) -> ::std::os::raw::c_ulonglong,
    >;
}
extern "C" {
    pub static mut ReportPresent: ::std::option::Option<
        unsafe extern "C" fn(
            timestamp_ns: ::std::os::raw::c_ulonglong,
            offset_ns: ::std::os::raw::c_ulonglong,
        ),
    >;
}
extern "C" {
    pub static mut ReportComposed: ::std::option::Option<
        unsafe extern "C" fn(
            timestamp_ns: ::std::os::raw::c_ulonglong,
            offset_ns: ::std::os::raw::c_ulonglong,
        ),
    >;
}
extern "C" {
    pub static mut ReportEncoded:
        ::std::option::Option<unsafe extern "C" fn(timestamp_ns: ::std::os::raw::c_ulonglong)>;
}
extern "C" {
    pub static mut ReportSave:
        ::std::option::Option<unsafe extern "C" fn(timestamp_ns: ::std::os::raw::c_ulonglong)>;
}
extern "C" {
    pub static mut GetDynamicEncoderParams:
        ::std::option::Option<unsafe extern "C" fn() -> FfiDynamicEncoderParams>;
}
extern "C" {
    pub static mut GetSerialNumber: ::std::option::Option<
        unsafe extern "C" fn(
            deviceID: ::std::os::raw::c_ulonglong,
            outString: *mut ::std::os::raw::c_char,
        ) -> ::std::os::raw::c_ulonglong,
    >;
}
extern "C" {
    pub static mut SetOpenvrProps:
        ::std::option::Option<unsafe extern "C" fn(deviceID: ::std::os::raw::c_ulonglong)>;
}
extern "C" {
    pub static mut WaitForVSync: ::std::option::Option<unsafe extern "C" fn()>;
}
extern "C" {
    pub fn CppEntryPoint(
        pInterfaceName: *const ::std::os::raw::c_char,
        pReturnCode: *mut ::std::os::raw::c_int,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn InitializeStreaming();
}
extern "C" {
    pub fn DeinitializeStreaming();
}
extern "C" {
    pub fn SendVSync();
}
extern "C" {
    pub fn RequestIDR();
}
